# ESP8266-IKEA-Ledberg

./: CMakeLists.txt  README.md  mos.yml
frontend/: index.html  index.js
fs/: index.html  index.js  style.css
src/: main.c
